--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
-:root{
-  --primary-dark: #5651e5;
-  --primary-light: #709dff;
-
-}
-
-@layer base{
-  html{
-    @apply scroll-smooth
-  }
+body{
+  font-family: 'Outfit', sans-serif;
 }
