--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Outfit&display=swap');
 
-body{
-  font-family: 'Outfit', sans-serif;
+@layer base{
+    button{
+        @apply font-montserrat flex rounded p-1 py-2 px-2 items-center
+    }
 }
